[gd_scene load_steps=16 format=3 uid="uid://k7jcmvhi1mkt"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_3wadd"]
[ext_resource type="PackedScene" uid="uid://dd4jcjsdclggb" path="res://Enemy/zombie.tscn" id="2_07l7p"]
[ext_resource type="PackedScene" uid="uid://dcm5fnl0wh8bb" path="res://stats.tscn" id="2_hxsom"]
[ext_resource type="AudioStream" uid="uid://ct5pjjf1myrxc" path="res://Enemy/Audio/Enemy attack.wav" id="4_2mqev"]
[ext_resource type="AudioStream" uid="uid://3ycfdsbgnl1p" path="res://Enemy/Audio/Enemy death_02.wav" id="5_5ihrx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_530xm"]
radius = 0.570832
height = 2.91752

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5unfu"]
height = 1.0
radius = 1.5

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dcte7"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fvbvl"]
animation = &"dead_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_83hyi"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bsrnu"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t3a2y"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mt4po"]
switch_mode = 2
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bd88a"]
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ehgt6"]
states/attack/node = SubResource("AnimationNodeAnimation_dcte7")
states/attack/position = Vector2(634, 81)
states/dead_2/node = SubResource("AnimationNodeAnimation_fvbvl")
states/dead_2/position = Vector2(582, 194)
states/run/node = SubResource("AnimationNodeAnimation_83hyi")
states/run/position = Vector2(457, 81)
transitions = ["Start", "run", SubResource("AnimationNodeStateMachineTransition_bsrnu"), "run", "attack", SubResource("AnimationNodeStateMachineTransition_t3a2y"), "attack", "run", SubResource("AnimationNodeStateMachineTransition_mt4po"), "run", "dead_2", SubResource("AnimationNodeStateMachineTransition_bd88a")]
graph_offset = Vector2(18, 50)

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33484, 0)
collision_layer = 4
collision_mask = 15
script = ExtResource("1_3wadd")

[node name="zombie" parent="." instance=ExtResource("2_07l7p")]
transform = Transform3D(0.0165604, 0, 0, 0, 0.0165604, 0, 0, 0, 0.0165604, 0, -1.3451, 0)

[node name="Armature" parent="zombie" index="0"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0, 0)

[node name="Skeleton3D" parent="zombie/Armature" index="0"]
bones/0/position = Vector3(-17.9251, 122.109, -11.0298)
bones/0/rotation = Quaternion(0.117309, 0.243203, -0.125636, 0.954624)
bones/1/rotation = Quaternion(-0.000283668, -0.0506815, -0.120513, 0.991417)
bones/2/rotation = Quaternion(-0.0423674, -0.0191962, -0.0512762, 0.997601)
bones/3/rotation = Quaternion(0.0431406, -0.0189926, -0.0513409, 0.997568)
bones/4/rotation = Quaternion(-0.0759727, 0.0238294, 0.0742889, 0.994053)
bones/5/rotation = Quaternion(-0.120544, 0.296151, 0.199292, 0.926308)
bones/9/rotation = Quaternion(-0.624559, -0.365665, 0.522281, -0.451041)
bones/10/position = Vector3(6.71768e-06, 17.0752, 7.13023e-06)
bones/10/rotation = Quaternion(0.338385, -0.368804, 0.0979014, 0.860171)
bones/11/rotation = Quaternion(-0.280493, -0.0313223, 0.813011, 0.50927)
bones/12/position = Vector3(8.63902e-06, 28.1504, 7.15548e-06)
bones/12/rotation = Quaternion(-0.210447, -0.0137494, 0.122373, 0.969818)
bones/13/rotation = Quaternion(0.0866685, 0.166289, 0.311015, 0.931722)
bones/14/position = Vector3(4.52995e-06, 4.10296, 8.82149e-06)
bones/14/rotation = Quaternion(0.201675, -0.0221025, -0.386901, 0.899526)
bones/15/position = Vector3(1.43052e-06, 3.05825, -1.09077e-05)
bones/15/rotation = Quaternion(0.185723, 0.260241, -0.039622, 0.946685)
bones/16/position = Vector3(9.89436e-06, 2.16701, -1.67787e-05)
bones/17/position = Vector3(-3.14717, 14.9505, 0.251424)
bones/17/rotation = Quaternion(0.0566545, 0.040094, -0.114076, 0.991045)
bones/18/position = Vector3(1.79927e-05, 3.05844, 4.132e-06)
bones/18/rotation = Quaternion(0.208816, -0.00389492, -0.0270303, 0.977574)
bones/19/rotation = Quaternion(0.178609, -0.00306122, -0.0238557, 0.983626)
bones/20/position = Vector3(5.72042e-06, 2.82399, 5.69122e-06)
bones/21/rotation = Quaternion(0.121809, 0.033076, -0.0952586, 0.987418)
bones/22/position = Vector3(7.93505e-07, 4.53319, 6.77185e-06)
bones/22/rotation = Quaternion(0.314547, -0.0155232, -0.0400621, 0.948269)
bones/23/rotation = Quaternion(0.209082, -0.00557445, -0.0269594, 0.977511)
bones/24/position = Vector3(-8.27851e-06, 3.38778, -7.99258e-06)
bones/25/rotation = Quaternion(0.0882121, 0.0141217, -0.150646, 0.984543)
bones/26/position = Vector3(6.97057e-07, 3.19003, 9.8333e-07)
bones/26/rotation = Quaternion(0.372847, -0.00949198, -0.0490156, 0.926549)
bones/27/position = Vector3(6.43765e-06, 3.464, -1.27431e-05)
bones/27/rotation = Quaternion(0.268049, -0.00452437, -0.035188, 0.962752)
bones/28/position = Vector3(-2.63851e-06, 2.16795, -8.98926e-06)
bones/29/position = Vector3(5.51792, 12.7486, 0.325014)
bones/29/rotation = Quaternion(0.0788619, 0.0409354, -0.184014, 0.978899)
bones/30/position = Vector3(3.6014e-07, 2.2386, 1.66562e-06)
bones/30/rotation = Quaternion(0.254776, -0.00236095, -0.0343362, 0.966387)
bones/31/position = Vector3(-3.48812e-06, 3.23325, -3.1884e-06)
bones/31/rotation = Quaternion(0.337811, 0.00162862, -0.0442589, 0.940172)
bones/32/position = Vector3(-8.16901e-07, 1.87534, -1.05993e-05)
bones/33/rotation = Quaternion(0.567363, -0.380939, 0.689059, 0.241211)
bones/34/position = Vector3(1.49678e-06, 17.0752, -3.75354e-06)
bones/34/rotation = Quaternion(0.035968, -0.239465, -0.0697335, 0.967729)
bones/35/position = Vector3(5.40902e-07, 22.1593, 3.62387e-06)
bones/35/rotation = Quaternion(0.491915, 0.160241, -0.12676, 0.84633)
bones/36/position = Vector3(1.48001e-07, 28.1503, 3.36643e-06)
bones/36/rotation = Quaternion(0.182886, 0.0897258, -0.10255, 0.973646)
bones/37/rotation = Quaternion(0.0967657, -0.088975, -0.244539, 0.960688)
bones/38/position = Vector3(5.72205e-06, 4.10294, -1.90735e-06)
bones/38/rotation = Quaternion(0.103865, -0.0413157, 0.25498, 0.960464)
bones/39/position = Vector3(-6.43719e-06, 3.05807, 2.46106e-07)
bones/39/rotation = Quaternion(0.103665, -0.369308, 0.0903138, 0.91908)
bones/40/position = Vector3(-1.68085e-05, 2.16723, 1.46022e-06)
bones/41/position = Vector3(3.14716, 14.9505, 0.251003)
bones/41/rotation = Quaternion(-0.0995713, -0.00612661, 0.0800264, 0.991788)
bones/42/position = Vector3(-1.87678e-05, 3.05842, -3.39135e-06)
bones/42/rotation = Quaternion(0.54304, 0.0027938, 0.0728904, 0.836533)
bones/43/position = Vector3(-2.37299e-05, 3.3601, 3.3561e-06)
bones/43/rotation = Quaternion(0.529562, 0.00179393, 0.0705462, 0.845331)
bones/44/position = Vector3(-4.78054e-06, 2.82399, -7.61205e-07)
bones/45/rotation = Quaternion(-0.156601, -0.00818571, 0.0545841, 0.986119)
bones/46/position = Vector3(-6.84716e-06, 4.53319, -2.34009e-06)
bones/46/rotation = Quaternion(0.581532, 0.0146031, 0.079491, 0.809499)
bones/47/position = Vector3(4.9005e-07, 2.18801, 1.06435e-05)
bones/47/rotation = Quaternion(0.458432, 0.00489233, 0.0606943, 0.886641)
bones/48/position = Vector3(-8.73e-06, 3.38771, -7.37743e-07)
bones/49/position = Vector3(-3.5048, 15.1083, -0.0119918)
bones/49/rotation = Quaternion(0.110912, -0.0206335, 0.115745, 0.986852)
bones/50/position = Vector3(5.5013e-06, 3.19009, -6.74929e-06)
bones/50/rotation = Quaternion(0.425698, 0.00706782, 0.0575355, 0.903007)
bones/51/position = Vector3(-1.046e-05, 3.46399, 4.45687e-06)
bones/51/rotation = Quaternion(0.402565, 0.00406073, 0.0534558, 0.91382)
bones/52/position = Vector3(-7.00652e-06, 2.16792, -3.06747e-07)
bones/53/rotation = Quaternion(-0.0654249, -0.0485431, 0.219146, 0.972285)
bones/54/position = Vector3(2.94873e-06, 2.2386, -1.14939e-05)
bones/54/rotation = Quaternion(0.392528, -0.000351933, 0.0541122, 0.918147)
bones/55/position = Vector3(-9.62273e-08, 3.23329, -4.66595e-06)
bones/55/rotation = Quaternion(0.698094, -0.00207999, 0.092063, 0.71006)
bones/56/position = Vector3(3.67251e-06, 1.87543, -8.61698e-06)
bones/60/rotation = Quaternion(1, 1.36788e-09, -6.67522e-08, -4.84288e-08)
bones/62/rotation = Quaternion(0.242062, 0.614938, 0.700521, -0.269311)
bones/63/position = Vector3(-4.23113e-06, 41.2533, 1.43492e-06)
bones/63/rotation = Quaternion(-0.619897, -0.187899, 0.0346266, 0.761067)
bones/64/rotation = Quaternion(0.242328, -0.022506, -0.0351263, 0.969297)
bones/65/rotation = Quaternion(0.370221, -0.0388542, 0.0661952, 0.925767)
bones/67/rotation = Quaternion(-0.0978984, 0.102414, 0.970203, 0.196554)
bones/68/rotation = Quaternion(-0.257855, 0.0661676, -0.10935, 0.957693)
bones/69/position = Vector3(-1.58038e-06, 41.475, -4.46309e-06)
bones/69/rotation = Quaternion(0.291804, 0.0277488, 0.0491044, 0.954814)
bones/70/position = Vector3(-4.38014e-07, 17.3, -2.97969e-06)
bones/70/rotation = Quaternion(-0.026146, 0.115604, 0.0981926, 0.988084)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.229675, 0)
shape = SubResource("CapsuleShape3D_530xm")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Stats" parent="." instance=ExtResource("2_hxsom")]
max_HP = 8

[node name="AttackRadio" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRadio"]
shape = SubResource("CylinderShape3D_5unfu")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2mqev")

[node name="AudioDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5ihrx")
volume_db = 1.0

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../zombie")
tree_root = SubResource("AnimationNodeStateMachine_ehgt6")
anim_player = NodePath("../zombie/AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/dead = false
parameters/conditions/run = false

[connection signal="dead_signal" from="Stats" to="." method="_on_stats_dead_signal"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="zombie"]
